# FluxCRM

./: .gitignore  CMakeLists.txt  README.md  build.bat
src/: crm_core.hpp  gui_host.hpp  main.cpp
src/cli/: cli_host.hpp
src/ui/: Kanban.hpp  analytics.hpp  context.hpp  pipeline.hpp  sidebar.hpp  statusbar.hpp
